--- a/day2/home.html
+++ b/day2/home.html
@@ -17,7 +17,7 @@
       <a class="navbar-brand" href="#">Horses</a>
     </div>
     <ul class="nav navbar-nav">
-      <li><a href="home.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="horses.html">Horses</a></li>
       <li><a href="tlable.html">Horses Table</a></li>
 
